--- a/exercises/nesting/public/app.css
+++ b/exercises/nesting/public/app.css
@@ -4,12 +4,12 @@ body h1 {
 
 .btn {
   padding: 2px 10px;
-  border: 1px solid #c46;
   border-radius: 2px;
+  border-style: solid;
 }
 
 .btn.btn-primary {
-  background-color: #c46;
+  background-color: #cc4466;
   color: white;
 }
 
