--- a/exercises/nesting/src/sass/app.scss
+++ b/exercises/nesting/src/sass/app.scss
@@ -1,5 +1,21 @@
 body {
-    h1 {
+  h1 {
     color: #c46;
+  }
+}
+
+.btn {
+  padding: 2px 10px;
+  border-radius: 2px;
+  border-style: solid;
+  &.btn-primary {
+    background-color: rgb(204, 68, 102);
+    color: rgb(255,255,255);
+  }
+  &.btn-secondary {
+    background-color: rgb(237, 188, 200);
+  }
+  &:disabled {
+    opacity: 0.5;
   }
 }
